// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals complaints by cohort actions component renders 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      Your complaint rate is unusually high. A consistently high complaint rate leads to deliverability issues. Work on improving your list hygiene and consider refreshing your content.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/",
    "type": "bad",
  },
]
`;

exports[`Signals complaints by cohort actions component renders combination for semi/not/recently engaged cohorts 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      Many of your 
      <strong>
        Semi-Recently Engaged and Not Recently Engaged
      </strong>
       recipients are marking your emails as spam. If this continues, you risk hurting your performance. Refreshing your content and segmenting your recipients can provide a better customer experience and lead to less spam complaints.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/content-refresh/",
    "type": "bad",
  },
  Object {
    "content": <React.Fragment>
      Some of your 
      <strong>
        Recently Engaged
      </strong>
       recipients are marking your emails as spam. Refreshing your content and segmenting your recipients can improve your relationships and lead to less spam complaints.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/content-refresh/",
    "type": "warning",
  },
]
`;

exports[`Signals complaints by cohort actions component renders only 3 messages in the correct order 1`] = `
Array [
  Object {
    "content": <React.Fragment>
      Your complaint rate is unusually high. A consistently high complaint rate leads to deliverability issues. Work on improving your list hygiene and consider refreshing your content.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/",
    "type": "bad",
  },
  Object {
    "content": <React.Fragment>
      Many of your 
      <strong>
        Recently Engaged, Semi-Recently Engaged, and Not Recently Engaged
      </strong>
       recipients are marking your emails as spam. If this continues, you risk hurting your performance. Refreshing your content and segmenting your recipients can provide a better customer experience and lead to less spam complaints.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/content-refresh/",
    "type": "bad",
  },
  Object {
    "content": <React.Fragment>
      Many recipients who have never engaged are reporting your emails as spam. Remove these recipients to lower your complaint rate and have a more successful email program.
    </React.Fragment>,
    "link": "https://www.sparkpost.com/docs/signals/list-hygiene/",
    "type": "bad",
  },
]
`;
